# Windows-Task-Manager-Clone

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: constants.rs  main.rs
src/app/: affinity.rs  cli.rs  detail_view.rs  export.rs  input.rs  mod.rs  navigation.rs  process_entry.rs  process_ops.rs  sort.rs  state.rs  tree_builder.rs  view_mode.rs
src/ffi/: handles.rs  mod.rs
src/system/: admin.rs  affinity.rs  cpu.rs  details.rs  disk.rs  error.rs  memory.rs  mod.rs  path.rs  priority.rs  processes.rs  suspend.rs  uptime.rs
src/ui/: affinity.rs  components.rs  detail_view.rs  help.rs  mod.rs  process_list.rs  render.rs  utils.rs
