[package]
name = "task_manager_clone"
version = "0.1.0"
edition = "2021"

[dependencies]
# Windows API bindings - raw Win32 calls
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

# CLI rendering with refresh capability
crossterm = "0.28"
